--- a/aws-cloudformation/create-eks-cluster.yml
+++ b/aws-cloudformation/create-eks-cluster.yml
@@ -23,6 +23,9 @@ Resources:
       GroupDescription: Cluster communication with worker nodes
       VpcId:
         Fn::ImportValue: !Sub "${EnvironmentName}-VPCID"
+      SecurityGroupIngress:
+        - IpProtocol: -1
+          CidrIp: 0.0.0.0/0
 
   eksClusterRole:
     Type: AWS::IAM::Role
@@ -92,6 +95,17 @@ Resources:
         MinSize: 3
       RemoteAccess:
         Ec2SshKey: shared-c9
+
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+      SecurityGroupEgress:
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
 
 Outputs:
   EKSClusterArn:
