--- a/kubernetes/blue-deployment.yml
+++ b/kubernetes/blue-deployment.yml
@@ -1,11 +1,9 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: blue-apache-deployment
+  name: apache-deployment
   labels:
     app: apache-app
-    deployment: blue
 spec:
   replicas: 3
   selector:
@@ -15,7 +13,6 @@ spec:
     metadata:
       labels:
         app: apache-app
-        deployment: blue
     spec:
       containers:
       - name: apache-test
