--- a/aws-cloudformation/create-eks-cluster.yml
+++ b/aws-cloudformation/create-eks-cluster.yml
@@ -26,6 +26,9 @@ Resources:
       SecurityGroupIngress:
         - IpProtocol: -1
           CidrIp: 0.0.0.0/0
+      SecurityGroupEgress:
+        - IpProtocol: -1
+          CidrIp: 0.0.0.0/0
 
   eksClusterRole:
     Type: AWS::IAM::Role
@@ -95,17 +98,8 @@ Resources:
         MinSize: 3
       RemoteAccess:
         Ec2SshKey: shared-c9
-
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
-          CidrIp: 0.0.0.0/0
-      SecurityGroupEgress:
-        - IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
-          CidrIp: 0.0.0.0/0
+        SourceSecurityGroups:
+          - !Ref ControlPlaneSecurityGroup
 
 Outputs:
   EKSClusterArn:
