--- a/kubernetes/blue-deployment.yml
+++ b/kubernetes/blue-deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: apache-deployment
+  name: blue-apache-deployment
   labels:
     app: apache-app
 spec:
